rename to ClawKeeper, add stable IDs, CLI setup, and agent skills
- Rename app from Welltime to ClawKeeper across all files
- Embed stable IDs as HTML comments in markdown (<!-- id:xxx -->)
- Add healIds() for duplicate/missing ID detection
- Fix ID accumulation bug (multiple IDs per line on each save)
- Add CLAWKEEPER_DIR env var for shared data directory
- Add bin/clawkeeper wrapper script for system-wide CLI access
- Add Claude Code skill (.claude/skills/clawkeeper/)
- Add OpenClaw skill (skills/clawkeeper/)
- Rewrite README with full setup documentation
- Add CLI source (cli/) to version control

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "welltime"
+name = "clawkeeper"
 version = "0.1.0"
 description = "A productivity app that separates who you're becoming from what you need to get done"
 authors = ["you"]
