--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "welltime",
+  "name": "clawkeeper",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -12,7 +12,9 @@
     "test:run": "vitest run",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build"
+    "tauri:build": "tauri build",
+    "cli": "npx tsx cli/main.ts",
+    "test:cli": "vitest run --config cli/vitest.config.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
@@ -37,6 +39,7 @@
     "jsdom": "^27.4.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.5",
     "vitest": "^4.0.16"
